Fixed toolbar sizes and margins to align with lens

--- a/src/plugins/presentation_util/public/components/solution_toolbar/solution_toolbar.scss
+++ b/src/plugins/presentation_util/public/components/solution_toolbar/solution_toolbar.scss
@@ -1,4 +1,4 @@
 .solutionToolbar {
-  padding: 0 $euiSizeS $euiSizeS;
+  padding: $euiSize $euiSizeS;
   flex-grow: 0;
 }
